# nlp-final

./: .env_template  .gitignore  README.md  pyproject.toml
csvs/common/: google_cot_fr.csv  google_cot_mean.csv  google_cot_prob.csv  google_cot_rstd.csv  local_cot_rstd.csv
csvs/taskc/: google_cot_fr.csv  google_cot_mean.csv  google_cot_prob.csv  google_cot_rstd.csv  google_diff_rstd.csv  local_multichoice_fr.csv
eval/: eval.py  evalv1.txt  evalv2(good).txt
script/: exp.sh
src/: data.py  eval.py  exp.py  expversion1.txt  gen.py  local_gen.py  mmmlu_metadata.py  pride_method(good).txt  pride_method.py  prompt.py  util.py  utilv1.txt  version1.txt
test/: test.py
